# flows/tests/logged_in_alert.yaml
appId: ${APP_ID}
tags:
  - regression

onFlowStart:
  - launchApp:
      clearState: true
  - runFlow:
      file: ../common/login.yaml
      env:
        EMAIL: "test@mobile-automation.io"
        PASSWORD: "Password1234"

onFlowComplete:
  - stopApp

---
- assertVisible: "You are logged in!"
- tapOn: "OK"
- assertNotVisible: "You are logged in!"
